# ltg

./: LTG.hs  Lambda.hs  Lib.hs  Play.hs  SamplePlayer1.hs  Session1.hs  Session2.hs  Session3.hs  Setup.lhs  SlotName.hs  TitForTat.hs  ToDo  ltg.cabal
src/: DoNothing.hs  Eval.hs  LTG.hs  Lambda.hs  Lib.hs  Misc.hs  Play.hs  Player.hs  RandomPlayer.hs  SamplePlayer1.hs  SamplePlayer2.hs  SamplePlayer2a.hs  SamplePlayer3.hs  SamplePlayer4.hs  Session1.hs  Session2.hs  Session3.hs  SlotName.hs  TaskLib.hs  TitForTat.hs  run.hs
submission/: Makefile
