Name:           ltg
Version:        0.0.1
Cabal-Version:  >= 1.6
Build-Type:     Simple
-- license:        BSD3
-- license-file:   LICENSE
-- copyright:      
-- author:         
-- maintainer:     
-- homepage:       
Stability:      alpha
-- package-url:    
Synopsis:       ICFP Programming Contest's Program
Description:

Tested-with: GHC == 7.0.3

-- Libraries
--  build-depends:    base, containers, mtl
--  Exposed-Modules:  

Executable run
  HS-Source-Dirs: src
  Build-Depends:   base, containers, mtl
  Main-Is:         run.hs

Executable TitForTat
  HS-Source-Dirs: src
  Build-Depends:   base, containers, mtl
  Main-is:         TitForTat.hs

Source-repository this
  type:           darcs
  Location:       icfp11@www.sampou.org:ltg/
  -- location:       http://icfp11@www.sampou.org:ltg/ ?
